# agentic-sdlc-skills

./: .continues-handoff.md  .gitignore  CONTEXT.md  HANDOFF.md  Makefile  QA.md  README.md  README_zh.md  REVIEW_NOTES.md  REVIEW_NOTES_v2.md
test_projects/trial-11-s7validation/: CHANGELOG.md  CONTEXT_SNAPSHOT.md  RULES.md  TASK_DAG.md  pyproject.toml  test-results.json
test_projects/trial-11-s7validation/docs/releases/: 2026-05-16-v1.0.0-deploy.md  2026-05-16-v1.0.0-telemetry.json
test_projects/trial-11-s7validation/docs/tests/: 2026-05-16-s7-validation-report.md
test_projects/trial-11-s7validation/src/: api.py  string_stats.py
test_projects/trial-11-s7validation/tests/unit/: test_string_stats.py
test_projects/trial-14-e2e/: CHANGELOG.md  CONTEXT.md  pyproject.toml
test_projects/trial-14-e2e/docs/arch/: 2026-05-16-mdtoc-design.md  2026-05-16-mdtoc-wbs.md
test_projects/trial-14-e2e/docs/audit/: 2026-05-16-pr-review.md
test_projects/trial-14-e2e/docs/releases/: 2026-05-16-v1.0.0-deploy.md  2026-05-16-v1.0.0-telemetry.json
test_projects/trial-14-e2e/docs/specs/: 2026-05-16-mdtoc-requirements.md  2026-05-16-mdtoc-vision.md
test_projects/trial-14-e2e/docs/tests/: 2026-05-16-perf-baseline.json  2026-05-16-test-results.json
test_projects/trial-14-e2e/src/mdtoc/: __init__.py  (+2 more)
test_projects/trial-14-e2e/tests/: test_cli.py  test_core.py  test_perf.py
test_projects/trial-16-changelog-gate/: CHANGELOG.md  CONTEXT.md  RULES.md  pyproject.toml  test-results.json
test_projects/trial-16-changelog-gate/tests/: test_cli.py  test_parser.py  test_rules.py
(+315 files in other folders)
