[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mdtoc"
version = "1.0.0"
description = "Generate and insert a Table of Contents into Markdown files"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
mdtoc = "mdtoc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
