[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "changelog-checker"
version = "1.0.0"
description = "Keep a Changelog compliance checker CLI"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
changelog-check = "changelog_checker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
